// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BooleanSpaceFeature Component renders children if feature is enabled 1`] = `
<BooleanSpaceFeature
  spaceFeatureKey="ff"
>
  1
</BooleanSpaceFeature>
`;

exports[`BooleanSpaceFeature Component renders null if feature is disabled 1`] = `
<BooleanSpaceFeature
  spaceFeatureKey="ff"
/>
`;
